--- a/medical_insurance/views/hr_employee_views.xml
+++ b/medical_insurance/views/hr_employee_views.xml
@@ -10,6 +10,12 @@
 
             <xpath expr="//notebook" position="inside">
                 <page string="Medical Insurance" name="medical_insurance">
+                    <div>
+                        <h3>
+                            <strong>Employee Medical Insurance</strong>
+                        </h3>
+                    </div>
+
                     <field name="medical_insurance_ids">
                         <list editable="bottom">
                             <field name="employee_id" column_invisible="1"/>
@@ -25,7 +31,12 @@
                             <field name="company_discount"/>
                         </list>
                     </field>
-                     <field name="family_insurance_ids">
+                    <div>
+                        <h3>
+                            <strong>Family Medical Insurance</strong>
+                        </h3>
+                    </div>
+                    <field name="family_insurance_ids">
                         <list editable="bottom">
                             <field name="employee_id" column_invisible="1"/>
                             <field name="family_member_name"/>
@@ -42,6 +53,26 @@
                             <field name="company_discount"/>
                         </list>
                     </field>
+
+                    <div class="row">
+                        <div class="col-4">
+                            <label for="total_company_share"/>
+                            <br/>
+                            <field name="total_company_share"/>
+                        </div>
+                        <div class="col-4">
+                            <label for="total_employee_share"/>
+                            <br/>
+                            <field name="total_employee_share"/>
+
+                        </div>
+                        <div class="col-4">
+                            <label for="total_monthly_contribution"/>
+                            <br/>
+                            <field name="total_monthly_contribution"/>
+
+                        </div>
+                    </div>
 
 
                 </page>
