--- a/social_insurance/reports/action_report_views.xml
+++ b/social_insurance/reports/action_report_views.xml
@@ -8,25 +8,51 @@
         <field name="page_height">297</field>
         <field name="page_width">210</field>
         <field name="orientation">Landscape</field>
-        <field name="margin_top">28</field>
+        <field name="margin_top">29</field>
         <field name="margin_bottom">15</field>
         <field name="margin_left">3</field>
         <field name="margin_right">3</field>
         <field name="header_line" eval="False"/>
-        <field name="header_spacing">25</field>
+        <field name="header_spacing">27</field>
         <field name="dpi">90</field>
     </record>
 
 
     <record id="social_insurance_wizard_pdf_report" model="ir.actions.report">
         <field name="name">Social Insurance (PDF)</field>
-        <field name="model">social.insurance.wizard</field>
+        <field name="model">social.insurance</field>
         <field name="report_type">qweb-pdf</field>
         <field name="report_name">social_insurance.social_insurance_template</field>
         <field name="print_report_name">'Social Insurance PDF'</field>
         <field name="paperformat_id" ref="social_insurance.paperformat_social_insurance"/>
 
     </record>
+
+    <record id="action_print_social_insurance_pdf" model="ir.actions.server">
+        <field name="name">Print Social Insurance PDF</field>
+        <field name="model_id" ref="model_social_insurance"/>
+        <field name="binding_model_id" ref="model_social_insurance"/>
+        <field name="state">code</field>
+        <field name="code">
+            action = {
+            'type': 'ir.actions.report',
+            'report_name': 'social_insurance.social_insurance_template',
+            'report_type': 'qweb-pdf',
+            'name': 'Social Insurance PDF',
+            'res_ids': [record.id for record in records],
+            }
+        </field>
+    </record>
+
+<record id="action_export_social_insurance_excel" model="ir.actions.server">
+    <field name="name">Export Social Insurance Excel</field>
+    <field name="model_id" ref="social_insurance.model_social_insurance"/>
+    <field name="binding_model_id" ref="social_insurance.model_social_insurance"/>
+    <field name="state">code</field>
+    <field name="code">
+action = records.generate_excel_report_multiple()
+    </field>
+</record>
 
 
 </odoo>
