--- a/employee_document/views/hr_employee_views.xml
+++ b/employee_document/views/hr_employee_views.xml
@@ -16,14 +16,7 @@
                             <field name="document_type_id"/>
                             <field name="issue_date"/>
                             <field name="name"/>
-                            <button name="action_view_uploads"
-                                    type="object"
-                                    string="Uploads"
-                                    icon="fa-paperclip"
-                                    class="oe_stat_button"/>
-                            <field name="attachments_count"/>
-                            <field name="true_false"/>
-
+                            <field name="uploads" widget="many2many_binary"/>
                         </list>
 
                     </field>
