--- a/social_insurance/reports/social_insurance_template_views.xml
+++ b/social_insurance/reports/social_insurance_template_views.xml
@@ -26,23 +26,23 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <t t-foreach="docs" t-as="line">
+                            <t t-foreach="docs.get_report_data()['combined_data']" t-as="line">
                                 <tr>
-                                    <td style="border: 1px solid #000; padding: 5px;"><t t-esc="line.employee_id.name"/></td>
-                                    <td style="border: 1px solid #000; padding: 5px;"><t t-esc="line.department_id.name"/></td>
-                                    <td style="border: 1px solid #000; padding: 5px;"><t t-esc="line.job_id.name"/></td>
-                                    <td style="border: 1px solid #000; padding: 5px;"><t t-esc="line.company_id.name"/></td>
-                                    <td style="border: 1px solid #000; padding: 5px;"><t t-esc="line.job_title_id.name"/></td>
-                                    <td style="border: 1px solid #000; padding: 5px;"><t t-esc="line.insurance_office_id.name"/></td>
-                                    <td style="border: 1px solid #000; padding: 5px;"><t t-esc="line.category_id.name"/></td>
-                                    <td style="border: 1px solid #000; padding: 5px;"><t t-esc="line.insurance_number"/></td>
-                                    <td style="border: 1px solid #000; padding: 5px;"><t t-esc="line.establishment_number"/></td>
-                                    <td style="border: 1px solid #000; padding: 5px;"><t t-esc="line.entry_date"/></td>
-                                    <td style="border: 1px solid #000; padding: 5px;"><t t-esc="line.exit_date"/></td>
-                                    <td style="border: 1px solid #000; padding: 5px;"><t t-esc="line.insurance_amount"/></td>
-                                    <td style="border: 1px solid #000; padding: 5px;"><t t-esc="line.company_portion"/></td>
-                                    <td style="border: 1px solid #000; padding: 5px;"><t t-esc="line.employee_portion"/></td>
-                                    <td style="border: 1px solid #000; padding: 5px;"><t t-esc="line.monthly_obligation"/></td>
+                                    <td style="border: 1px solid #000; padding: 5px;"><t t-esc="line['employee']"/></td>
+                                    <td style="border: 1px solid #000; padding: 5px;"><t t-esc="line['department']"/></td>
+                                    <td style="border: 1px solid #000; padding: 5px;"><t t-esc="line['job_position']"/></td>
+                                    <td style="border: 1px solid #000; padding: 5px;"><t t-esc="line['company']"/></td>
+                                    <td style="border: 1px solid #000; padding: 5px;"><t t-esc="line['job_title']"/></td>
+                                    <td style="border: 1px solid #000; padding: 5px;"><t t-esc="line['insurance_office']"/></td>
+                                    <td style="border: 1px solid #000; padding: 5px;"><t t-esc="line['category']"/></td>
+                                    <td style="border: 1px solid #000; padding: 5px;"><t t-esc="line['insurance_number']"/></td>
+                                    <td style="border: 1px solid #000; padding: 5px;"><t t-esc="line['establishment_number']"/></td>
+                                    <td style="border: 1px solid #000; padding: 5px;"><t t-esc="line['entry_date']"/></td>
+                                    <td style="border: 1px solid #000; padding: 5px;"><t t-esc="line['exit_date']"/></td>
+                                    <td style="border: 1px solid #000; padding: 5px;"><t t-esc="line['insurance_amount']"/></td>
+                                    <td style="border: 1px solid #000; padding: 5px;"><t t-esc="line['company_portion']"/></td>
+                                    <td style="border: 1px solid #000; padding: 5px;"><t t-esc="line['employee_portion']"/></td>
+                                    <td style="border: 1px solid #000; padding: 5px;"><t t-esc="line['monthly_obligation']"/></td>
                                 </tr>
                             </t>
                         </tbody>
