--- a/employee_document/views/document_type_views.xml
+++ b/employee_document/views/document_type_views.xml
@@ -8,6 +8,7 @@
             <list editable="bottom">
                 <field name="name"/>
                 <field name="code"/>
+                <field name="is_active"/>
             </list>
         </field>
     </record>
