--- a/medical_insurance/reports/family_medical_template_views.xml
+++ b/medical_insurance/reports/family_medical_template_views.xml
@@ -24,6 +24,7 @@
                                 <th style="border: 1px solid #000; padding: 5px;">Employee Share</th>
                                 <th style="border: 1px solid #000; padding: 5px;">Monthly Contribution</th>
                                 <th style="border: 1px solid #000; padding: 5px;">Company Discount</th>
+                                <th style="border: 1px solid #000; padding: 5px;">Active/In Active</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -74,6 +75,10 @@
                                     <td style="border: 1px solid #000; padding: 5px;">
                                         <t t-esc="line.company_discount"/>
                                     </td>
+                                    <td style="border: 1px solid #000; padding: 5px;">
+                                        <t t-esc="line.in_active"/>
+                                    </td>
+
                                 </tr>
                             </t>
                         </tbody>
