--- a/medical_insurance/views/hr_employee_views.xml
+++ b/medical_insurance/views/hr_employee_views.xml
@@ -19,16 +19,17 @@
                     <field name="medical_insurance_ids">
                         <list editable="bottom">
                             <field name="employee_id" column_invisible="1"/>
-                            <field name="insurance_number"/>
-                            <field name="insurance_provider_id"/>
-                            <field name="medical_network_id"/>
-                            <field name="insurance_category_id"/>
-                            <field name="insurance_start_date"/>
-                            <field name="insurance_end_date"/>
-                            <field name="company_share"/>
-                            <field name="employee_share"/>
-                            <field name="monthly_contribution"/>
-                            <field name="company_discount"/>
+                            <field name="insurance_number" optional="show"/>
+                            <field name="insurance_provider_id" optional="show"/>
+                            <field name="medical_network_id" optional="show"/>
+                            <field name="insurance_category_id" optional="show"/>
+                            <field name="insurance_start_date" optional="show"/>
+                            <field name="insurance_end_date" optional="show"/>
+                            <field name="company_share" optional="show"/>
+                            <field name="employee_share" optional="show"/>
+                            <field name="monthly_contribution" optional="show"/>
+                            <field name="company_discount" optional="show"/>
+                            <field name="in_active" optional="show"/>
                         </list>
                     </field>
                     <div>
@@ -39,18 +40,19 @@
                     <field name="family_insurance_ids">
                         <list editable="bottom">
                             <field name="employee_id" column_invisible="1"/>
-                            <field name="family_member_name"/>
-                            <field name="relation_id"/>
-                            <field name="insurance_number"/>
-                            <field name="insurance_provider_id"/>
-                            <field name="medical_network_id"/>
-                            <field name="insurance_category_id"/>
-                            <field name="insurance_start_date"/>
-                            <field name="insurance_end_date"/>
-                            <field name="company_share"/>
-                            <field name="employee_share"/>
-                            <field name="monthly_contribution"/>
-                            <field name="company_discount"/>
+                            <field name="family_member_name" optional="show"/>
+                            <field name="relation_id" optional="show"/>
+                            <field name="insurance_number" optional="show"/>
+                            <field name="insurance_provider_id" optional="show"/>
+                            <field name="medical_network_id" optional="show"/>
+                            <field name="insurance_category_id" optional="show"/>
+                            <field name="insurance_start_date" optional="show"/>
+                            <field name="insurance_end_date" optional="show"/>
+                            <field name="company_share" optional="show"/>
+                            <field name="employee_share" optional="show"/>
+                            <field name="monthly_contribution" optional="show"/>
+                            <field name="company_discount" optional="show"/>
+                            <field name="in_active" optional="show"/>
                         </list>
                     </field>
 
