--- a/social_insurance/reports/social_insurance_template_views.xml
+++ b/social_insurance/reports/social_insurance_template_views.xml
@@ -23,6 +23,7 @@
                                 <th style="border: 1px solid #000; padding: 5px;">Company Portion</th>
                                 <th style="border: 1px solid #000; padding: 5px;">Employee Portion</th>
                                 <th style="border: 1px solid #000; padding: 5px;">Monthly Obligation</th>
+                                <th style="border: 1px solid #000; padding: 5px;">Active/in-Active</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -43,6 +44,7 @@
                                     <td style="border: 1px solid #000; padding: 5px;"><t t-esc="line.company_portion"/></td>
                                     <td style="border: 1px solid #000; padding: 5px;"><t t-esc="line.employee_portion"/></td>
                                     <td style="border: 1px solid #000; padding: 5px;"><t t-esc="line.monthly_obligation"/></td>
+                                    <td style="border: 1px solid #000; padding: 5px;"><t t-esc="line.in_active"/></td>
                                 </tr>
                             </t>
                         </tbody>
