--- a/social_insurance/views/social_report_view.xml
+++ b/social_insurance/views/social_report_view.xml
@@ -6,21 +6,22 @@
         <field name="model">social.insurance</field>
         <field name="arch" type="xml">
             <list create="0">
-                <field name="employee_id"/>
-                <field name="department_id"/>
-                <field name="job_id"/>
-                <field name="company_id"/>
-                <field name="job_title_id"/>
-                <field name="insurance_office_id"/>
-                <field name="category_id"/>
-                <field name="insurance_number"/>
-                <field name="establishment_number"/>
-                <field name="entry_date"/>
-                <field name="exit_date"/>
-                <field name="insurance_amount"/>
-                <field name="company_portion"/>
-                <field name="employee_portion"/>
-                <field name="monthly_obligation"/>
+                <field name="employee_id" optional="show"/>
+                <field name="department_id" optional="show"/>
+                <field name="job_id" optional="show"/>
+                <field name="company_id" optional="show"/>
+                <field name="job_title_id" optional="show"/>
+                <field name="insurance_office_id" optional="show"/>
+                <field name="category_id" optional="show"/>
+                <field name="insurance_number" optional="show"/>
+                <field name="establishment_number" optional="show"/>
+                <field name="entry_date" optional="show"/>
+                <field name="exit_date" optional="show"/>
+                <field name="insurance_amount" optional="show"/>
+                <field name="company_portion" optional="show"/>
+                <field name="employee_portion" optional="show"/>
+                <field name="monthly_obligation" optional="show"/>
+                <field name="in_active" optional="show"/>
             </list>
         </field>
     </record>
@@ -39,6 +40,9 @@
                 <field name="job_title_id"/>
                 <field name="insurance_office_id"/>
                 <field name="category_id"/>
+                <filter name="in_active_true" string="True" domain="[('in_active_true', '=', True)]"/>
+                <filter name="in_active_false" string="False" domain="[('in_active_true', '=', False)]"/>
+
 
                 <!-- Group by filters -->
                 <group>
@@ -53,6 +57,9 @@
                             context="{'group_by':'insurance_office_id'}"/>
                     <filter name="group_category_id" string="Category" domain="[]"
                             context="{'group_by':'category_id'}"/>
+                    <filter name="group_active" string="Active" domain="[]"
+                            context="{'group_by':'in_active'}"/>
+
 
                 </group>
             </search>
