--- a/medical_insurance/views/medical_insurance_views.xml
+++ b/medical_insurance/views/medical_insurance_views.xml
@@ -37,8 +37,8 @@
                 <field name="job_id"/>
                 <field name="company_id"/>
                 <field name="registration_number"/>
-                <filter name="in_active_true" string="True" domain="[('in_active_true', '=', True)]"/>
-                <filter name="in_active_false" string="False" domain="[('in_active_true', '=', False)]"/>
+                <filter name="in_active" string="True" domain="[('in_active_true', '=', True)]"/>
+                <filter name="in_active" string="False" domain="[('in_active_true', '=', False)]"/>
 
                 <!-- Group by filters -->
                 <group>
