--- a/social_insurance/views/social_report_view.xml
+++ b/social_insurance/views/social_report_view.xml
@@ -40,8 +40,8 @@
                 <field name="job_title_id"/>
                 <field name="insurance_office_id"/>
                 <field name="category_id"/>
-                <filter name="in_active_true" string="True" domain="[('in_active_true', '=', True)]"/>
-                <filter name="in_active_false" string="False" domain="[('in_active_true', '=', False)]"/>
+                <filter name="in_active" string="True" domain="[('in_active', '=', True)]"/>
+                <filter name="in_active" string="False" domain="[('in_active', '=', False)]"/>
 
 
                 <!-- Group by filters -->
