--- a/social_insurance/views/insurance_office_views.xml
+++ b/social_insurance/views/insurance_office_views.xml
@@ -15,7 +15,7 @@
         <field name="name">Insurance Office</field>
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">insurance.office</field>
-        <field name="view_mode">tree</field>
+        <field name="view_mode">list</field>
     </record>
 
     <menuitem id="menu_social_insurance_root" name="Social Insurance" parent="hr.hr_menu_configuration"
