--- a/social_insurance/views/job_title_views.xml
+++ b/social_insurance/views/job_title_views.xml
@@ -15,7 +15,7 @@
         <field name="name">Job Title</field>
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">job.title</field>
-        <field name="view_mode">tree</field>
+        <field name="view_mode">list</field>
     </record>
 
 
