--- a/social_insurance/views/social_category_views.xml
+++ b/social_insurance/views/social_category_views.xml
@@ -15,7 +15,7 @@
         <field name="name">Social Category</field>
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">social.category</field>
-        <field name="view_mode">tree</field>
+        <field name="view_mode">list</field>
     </record>
 
 
