--- a/medical_insurance/views/family_insurance_config_views.xml
+++ b/medical_insurance/views/family_insurance_config_views.xml
@@ -11,6 +11,7 @@
                 <field name="age_to"/>
                 <field name="company_share"/>
                 <field name="employee_share"/>
+                <field name="insurance_amount"/>
             </list>
         </field>
     </record>
