--- a/medical_insurance/views/hr_employee_views.xml
+++ b/medical_insurance/views/hr_employee_views.xml
@@ -33,7 +33,7 @@
                             <field name="company_share" optional="show"/>
                             <field name="employee_share" optional="show"/>
                             <field name="monthly_contribution" optional="show"/>
-                            <field name="company_discount" optional="show"/>
+<!--                            <field name="company_discount" optional="show"/>-->
                             <field name="in_active" optional="show"/>
                         </list>
                     </field>
@@ -57,7 +57,7 @@
                             <field name="company_share" optional="show"/>
                             <field name="employee_share" optional="show"/>
                             <field name="monthly_contribution" optional="show"/>
-                            <field name="company_discount" optional="show"/>
+<!--                            <field name="company_discount" optional="show"/>-->
                             <field name="in_active" optional="show"/>
                         </list>
                     </field>
