--- a/contact_visibility/views/res_partner_views.xml
+++ b/contact_visibility/views/res_partner_views.xml
@@ -22,8 +22,8 @@
         </field>
     </record>
 
-    <record id="allowed_partner_rule" model="ir.rule">
-        <field name="name">Allowed Partner Rules</field>
+    <record id="allowed_partner_rule_user" model="ir.rule">
+        <field name="name">Allowed Partner Rules: Users</field>
         <field name="model_id" ref="base.model_res_partner"/>
         <field name="domain_force">
             ['|',
@@ -31,6 +31,14 @@
             ('allowed_user_ids', 'in', [user.id])
             ]
         </field>
+        <field name="groups" eval="[(4, ref('contact_visibility.contact_user_group'))]"/>
+    </record>
+
+    <record id="allowed_partner_rule_manager" model="ir.rule">
+        <field name="name">Allowed Partner Rules: Manager</field>
+        <field name="model_id" ref="base.model_res_partner"/>
+        <field name="domain_force">[(1, '=', 1)]</field>
+        <field name="groups" eval="[(4, ref('contact_visibility.contact_manager_group'))]"/>
     </record>
 
 
