--- a/journal_visibility/views/account_journal_views.xml
+++ b/journal_visibility/views/account_journal_views.xml
@@ -15,7 +15,7 @@
         </field>
     </record>
 
-    <record id="allowed_journals_rule" model="ir.rule">
+    <record id="allowed_journals_rule_user" model="ir.rule">
         <field name="name">Allowed Journals: Users</field>
         <field name="model_id" ref="account.model_account_journal"/>
         <field name="domain_force">
@@ -24,6 +24,12 @@
             ('allowed_user_ids', 'in', [user.id])
             ]
         </field>
+        <field name="groups" eval="[(4, ref('journal_visibility.journal_user_group'))]"/>
+    </record>
+     <record id="allowed_journals_rule_manager" model="ir.rule">
+        <field name="name">Allowed Journals: Manager</field>
+        <field name="model_id" ref="account.model_account_journal"/>
+        <field name="domain_force">[(1, '=', 1)]</field>
     </record>
 
 
