--- a/contact_visibility/views/hr_employee_views.xml
+++ b/contact_visibility/views/hr_employee_views.xml
@@ -9,7 +9,7 @@
         <field name="arch" type="xml">
 
             <xpath expr="//field[@name='address_id']" position="attributes">
-                <attribute name="domain">[('contact_type', '=', 'employee')]</attribute>
+                <attribute name="domain">[('is_employee', '=', True)]</attribute>
             </xpath>
 
         </field>
