--- a/contact_visibility/views/res_partner_views.xml
+++ b/contact_visibility/views/res_partner_views.xml
@@ -16,7 +16,9 @@
                 </page>
             </xpath>
             <xpath expr="//field[@name='category_id']" position="after">
-                <field name="contact_type"/>
+                <field name="is_customer"/>
+                <field name="is_vendor"/>
+                <field name="is_employee"/>
             </xpath>
 
         </field>
