--- a/contact_visibility/views/sale_order_views.xml
+++ b/contact_visibility/views/sale_order_views.xml
@@ -9,7 +9,7 @@
         <field name="arch" type="xml">
 
             <xpath expr="//field[@name='partner_id']" position="attributes">
-                <attribute name="domain">[('contact_type', '=', 'customer')]</attribute>
+                <attribute name="domain">[('is_customer', '=', True)]</attribute>
             </xpath>
 
         </field>
