--- a/product_visibility/views/product_template_views.xml
+++ b/product_visibility/views/product_template_views.xml
@@ -10,13 +10,13 @@
 
             <xpath expr="//field[@name='type']" position="after">
                 <field name="is_category_visibility"/>
-                <field name="allowed_user_ids" widget="many2many_tags" options="{'no_create': True, 'no_open': True}"/>
+                <field name="allowed_user_ids" widget="many2many_tags" options="{'no_create': True, 'no_open': True}" readonly="is_category_visibility == False"/>
             </xpath>
 
         </field>
     </record>
 
-    <record id="product_template_visibility_rule" model="ir.rule">
+    <record id="product_template_visibility_rule_user" model="ir.rule">
         <field name="name">Product Visibility By Allowed Users</field>
         <field name="model_id" ref="product.model_product_template"/>
         <field name="domain_force">
@@ -25,6 +25,14 @@
             ('allowed_user_ids', 'in', [user.id])
             ]
         </field>
+        <field name="groups" eval="[(4, ref('product_visibility.category_user_group'))]"/>
+    </record>
+
+     <record id="product_template_visibility_rule_manager" model="ir.rule">
+        <field name="name">Product Visibility By Allowed Manager</field>
+        <field name="model_id" ref="product.model_product_template"/>
+        <field name="domain_force">[(1, '=', 1)]</field>
+        <field name="groups" eval="[(4, ref('product_visibility.category_manager_group'))]"/>
     </record>
 
 </odoo>
